MOSIP-39741 added zgc for performance improvement
Signed-off-by: kameshsr <kameshsr1338@gmail.com>